---
query: generate an ERD Diagram based on the sql queries of this database
references:
  - "File: /phonetopia_kenya_db.sql"
generationTime: 2025-05-13T16:23:48.202Z
---
erDiagram
    EMPLOYEES {
        int employee_id PK
        string first_name
        string last_name
        string phone_number UK
        string position
    }
    SUPPLIERS {
        int supplier_id PK
        string name
        string contact_email
        string country
    }
    CATEGORIES {
        int category_id PK
        string category_name UK
    }
    PRODUCTS {
        int product_id PK
        string name
        int category_id FK
        decimal price
        int stock_quantity
        boolean is_trade_in_eligible
        int supplier_id FK
    }
    CUSTOMERS {
        int customer_id PK
        string full_name
        string phone_number UK
        string address
    }
    TRADE_INS {
        int trade_in_id PK
        int customer_id FK
        string old_iphone_model
        date trade_in_date
        decimal evaluated_value
    }
    ORDERS {
        int order_id PK
        int customer_id FK
        int employee_id FK
        datetime order_date
        string delivery_method
        string delivery_address
    }
    ORDER_ITEMS {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal unit_price
    }
    RIDERS {
        int rider_id PK
        string name
        string phone_number UK
    }
    EXPENSES {
        int expense_id PK
        string description
        string category
        decimal amount
        date expense_date
    }
    DELIVERIES {
        int delivery_id PK
        int order_id FK
        int rider_id FK
        string service
        date delivery_date
        string status
    }

    EMPLOYEES ||--o{ ORDERS : "handles"
    CUSTOMERS ||--o{ ORDERS : "places"
    ORDERS ||--o{ ORDER_ITEMS : "contains"
    PRODUCTS ||--o{ ORDER_ITEMS : "included in"
    CATEGORIES ||--o{ PRODUCTS : "categorizes"
    SUPPLIERS ||--o{ PRODUCTS : "supplies"
    CUSTOMERS ||--o{ TRADE_INS : "initiates"
    ORDERS ||--o{ DELIVERIES : "delivered by"
    RIDERS ||--o{ DELIVERIES : "assigned to"